Added jwerty + simplified payments prototype.
Testing close of payment popovers with ESC key.

Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,6 +92,7 @@
     'js/kendoui/kendo.draganddrop.min.js'
     'js/kendoui/kendo.calendar.min.js'
     'js/kendoui/kendo.*.min.js'
+    'js/jwerty.js'
     filter='yui_js'
     output='js/min/frameworks.js'
   %}
