Search form for invoices. Updated bootstrap-xtra.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -1,7 +1,5 @@
-// Bootstrap
-@import "bootstrap-files/bootstrap.less";
-
-// Bootstrap Xtra patches
+// Bootstrap Xtra & patches
+@import "bootstrap-files/bootstrap_xtra.less";
 @import "bootstrap-files/bootstrap-patches.less";
 
 // Kendo UI styles
@@ -17,3 +15,6 @@
 
 // Siwapp Tables common styles
 @import "siwapp-files/siwapp.tables.less";
+
+// Siwapp Forms common styles
+@import "siwapp-files/siwapp.forms.less";
