--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -1,45 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block searchform %}
-<div class="searchform">
-  <form action="" class="search">
-    <fieldset>
-      <ul class="unstyled">
-        <li>
-          <label for="search-term">{% trans %}Search term{% endtrans %}:</label>
-          <div class="input">
-            <input type="text" name="q" id="search-term" class="span5" />
-          </div>
-        </li>
-        <li>
-          <label for="search-date-from">{% trans %}From{% endtrans %}:</label>
-          <input type="text" name="date-from" id="search-date-from" />
-          <script type="text/javascript">
-            jQuery(function($){ $('#search-date-from').kendoDatePicker(); });
-          </script>
-        </li>
-        <li>
-          <label for="search-date-to">{% trans %}To{% endtrans %}:</label>
-          <input type="text" name="date-to" id="search-date-to" />
-          <script type="text/javascript">
-            jQuery(function($){ $('#search-date-to').kendoDatePicker(); });
-          </script>
-        </li>
-        <li>
-          
-        </li>
-        <li class="buttons">
-          <button id="search-submit" type="submit" class="btn primary icon small search alternative" title="hotkey: 's' then 's'">{% trans %}Search{% endtrans %}</button>
-          <button id="search-reset" type="reset" class="btn secondary small icon loop" title="hotkey: 's' then 'r'">{% trans %}Reset{% endtrans %}</button>
-          <a id="search-advanced" class="btn icon settings small" href="#" title="hotkey: 's' then 'a'">{% trans %}Advanced {% endtrans %}</a>
-        </li>
-      </ul>
-    </fieldset>
-    <fieldset id="search-secondary" style="display:none;">
-      Campos adicionales
-    </fieldset>
-  </form>
-</div>
+  {% include "SiwappInvoiceBundle:Default:search.html.twig" %}
 {% endblock %}
 
 {% block body %}
@@ -64,7 +26,6 @@
 {% block javascripts %}
   {{ parent() }}
   {% javascripts
-    'js/bundle/search-common.js'
     'js/bundle/invoice-payments.js'
     filter='yui_js'
     output='js/min/invoice-list.js'
