Small fix for h2
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp-files/siwapp.layout.less
+++ b/web/css/siwapp-files/siwapp.layout.less
@@ -119,6 +119,10 @@ li {
         border-bottom:1px solid @grayLighter;
         .box-shadow(0 4px 3px -2px rgba(0,0,0,.10));
     }
+    
+    h2 {
+        margin:0.5em 0 0.25em;
+    }
 }
 
 //
