Give less (CSS) z-index to sf debug toolbar
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -1,3 +1,7 @@
+.sf-toolbarreset {
+    z-index:10 !important;
+}
+
 // Bootstrap Xtra & patches
 @import "bootstrap-files/bootstrap_xtra.less";
 @import "bootstrap-files/bootstrap-patches.less";
