Payments interaction ready for dev in controller.
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/DashboardBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/DashboardBundle/Resources/views/Default/index.html.twig
@@ -111,7 +111,7 @@
           <td class="currency"></td>
           <td class="currency">$11,435.23</td>
           <td class="payments">
-            <a href="{{ path('invoice_payments', { 'invoiceId': 1 }) }}" class="btn secondary icon clock payments" title="Payments">{% trans %}Payments{% endtrans %}</a>
+            <a href="{{ path('invoice_payments', { 'invoiceId': 1 }) }}" class="btn secondary icon clock payments" title="Payments" data-invoice-id="1">{% trans %}Payments{% endtrans %}</a>
           </td>
         </tr>
         <tr>
@@ -125,7 +125,7 @@
           <td class="currency"></td>
           <td class="currency">$11,435.23</td>
           <td class="payments">
-            <a href="{{ path('invoice_payments', { 'invoiceId': 2 }) }}" class="btn secondary icon clock payments" title="Payments">{% trans %}Payments{% endtrans %}</a>
+            <a href="{{ path('invoice_payments', { 'invoiceId': 2 }) }}" class="btn secondary icon clock payments" title="Payments" data-invoice-id="2">{% trans %}Payments{% endtrans %}</a>
           </td>
         </tr>
         <tr>
@@ -139,7 +139,7 @@
           <td class="currency"></td>
           <td class="currency">$11,435.23</td>
           <td class="payments">
-            <a href="{{ path('invoice_payments', { 'invoiceId': 3 }) }}" class="btn secondary icon clock payments" title="Payments">{% trans %}Payments{% endtrans %}</a>
+            <a href="{{ path('invoice_payments', { 'invoiceId': 3 }) }}" class="btn secondary icon clock payments" title="Payments" data-invoice-id="3">{% trans %}Payments{% endtrans %}</a>
           </td>
         </tr>
       </tbody>
@@ -173,7 +173,7 @@
           <td class="currency"></td>
           <td class="currency">$11,435.23</td>
           <td class="payments">
-            <a href="{{ path('invoice_payments', { 'invoiceId': 4 }) }}" class="btn secondary icon clock payments" title="Payments">{% trans %}Payments{% endtrans %}</a>
+            <a href="{{ path('invoice_payments', { 'invoiceId': 4 }) }}" class="btn secondary icon clock payments" title="Payments" data-invoice-id="4">{% trans %}Payments{% endtrans %}</a>
           </td>
         </tr>
       </tbody>
