--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -1,28 +1,5 @@
 {% extends "::base.html.twig" %}
 
-{% block searchform %}
-  {% include "SiwappInvoiceBundle:Default:search.html.twig" %}
-{% endblock %}
-
-{% block body %}
-  
-  <h1>Invoices</h1>
-  
-  <p>
-    <button class="btn primary icon share alternative">Share this invoice!</button>
-  </p>
-  
-  <p>
-    <input id="datepicker" />
-    <script type="text/javascript">
-    jQuery(function($){
-      $('#datepicker').kendoDatePicker();
-    });
-    </script>
-  </p>
-  
-{% endblock %}
-
 {% block javascripts %}
   {{ parent() }}
   {% javascripts
@@ -32,4 +9,17 @@
   %}
   <script type="text/javascript" charset="utf-8" src="{{ asset_url }}"></script>
   {% endjavascripts %}
+{% endblock %}
+
+{% block searchform %}
+  {% include "SiwappInvoiceBundle:Default:search.html.twig" %}
+{% endblock %}
+
+{% block body %}
+  
+  <div id="invoices-latest-invoices">
+    {% set table_rows = invoices %}
+    {% include "SiwappInvoiceBundle:Default:invoices_list.html.twig" %}
+  </div>
+  
 {% endblock %}
