--- a/web/css/siwapp-files/siwapp.tables.less
+++ b/web/css/siwapp-files/siwapp.tables.less
@@ -22,6 +22,9 @@ table {
     }
     
     td, th {
+        &.check {
+            width:16px;
+        }
         &.date {
             width:100px;
         }
