More on listings: See https://github.com/siwapp/siwapp/wiki/Listings
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block searchform %}{% endblock %}
+
 {% block body %}
   
-  <h1>Invoices</h1>
   <form action="" method="post" {{ form_enctype(form) }}>
       {{ form_widget(form) }}
       <input type="submit" />
