--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/show.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/show.html.twig
@@ -1,8 +1,9 @@
 {% extends "::base.html.twig" %}
 
+{% block searchform %}{% endblock %}
+
 {% block body %}
   
-  <h1>Invoices</h1>
   <p>SHOW INVOICE</p>
   
 {% endblock %}
