displaying invoices in list

--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -18,7 +18,7 @@
 {% block body %}
   
   <div id="invoices-latest-invoices">
-    {% set table_rows = invoices %}
+    {% set table_rows = entities %}
     {% include "SiwappInvoiceBundle:Default:invoices_list.html.twig" %}
   </div>
   
