Renaming KendoUI CSS to LESS to avoid problems with include paths.
Now them get compiled with the rest of the files and are not reloaded.

Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/web/css/siwapp.less
+++ b/web/css/siwapp.less
@@ -7,8 +7,8 @@
 @import "bootstrap-files/bootstrap-patches.less";
 
 // Kendo UI styles
-@import "/css/kendo-files/kendo.common.min.css";
-@import "/css/kendo-files/kendo.kendo.min.css";
+@import "kendo-files/kendo.common.min.less";
+@import "kendo-files/kendo.kendo.min.less";
 
 // Siwapp Variables & Patterns
 @import "siwapp-files/siwapp.variables.less";
