--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/invoices_list.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/invoices_list.html.twig
@@ -10,7 +10,7 @@
   {% set table_columns = table_columns + 1 %}
 {% endif %}
 
-<table class="zebra-striped align-middle" data-type="invoices">
+<table class="condensed-table zebra-striped align-middle" data-type="invoices">
   <thead>
     <tr>
       {% if table_selectable %}
