--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/payments_form.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/payments_form.html.twig
@@ -1,5 +1,5 @@
 <form action="{{ path('invoice_payment_add', { 'invoiceId': invoiceId }) }}" method="post">
-  <table>
+  <table class="condensed-table">
     <thead>
       <tr>
         <th>
