--- a/web/css/siwapp-files/siwapp.variables.less
+++ b/web/css/siwapp-files/siwapp.variables.less
@@ -31,3 +31,9 @@
 @draftGrayBg:#eeeeee;
 @draftGrayBd:#dcdcdc;
 @draftGrayTx:#a098a0;
+
+//
+// Patches
+//
+
+@linkColor:#e34c15; // Bootstrap 1.4.0 modified this so we patch it here.
