--- a/web/css/siwapp-files/siwapp.patterns.less
+++ b/web/css/siwapp-files/siwapp.patterns.less
@@ -66,3 +66,94 @@ form {
     }
 }
 
+//
+// ZURB Foundation Buttons
+// http://foundation.zurb.com/docs/buttons.php
+//
+
+.button {
+    background: #00a6fc;
+    display: inline-block;
+    text-align: center;
+    padding: 9px 34px 11px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 1;
+    font-family: "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif;
+    position: relative;
+    cursor: pointer;
+    border: none;
+    
+    &.nice {
+        background: #00a6fc url(/img/button-gloss.png) repeat-x 0 -34px;
+        -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
+        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
+        text-shadow: 0 -1px 1px rgba(0,0,0,0.28);
+        background: #00a6fc url(/img/button-gloss.png) repeat-x 0 -34px, -moz-linear-gradient(top, rgba(255,255,255,.4) 0%, transparent 100%);
+        background: #00a6fc url(/img/button-gloss.png) repeat-x 0 -34px, -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.4)), color-stop(100%,transparent));
+        border: 1px solid #0593dc;
+        -webkit-transition: background-color .15s ease-in-out;
+        -moz-transition: background-color .15s ease-in-out;
+        -o-transition: background-color .15s ease-in-out;
+    }
+    
+    &.radius {
+        -moz-border-radius: 3px;
+        -webkit-border-radius: 3px;
+        border-radius: 3px;
+    }
+    
+    &.round { 
+        -moz-border-radius: 1000px;
+        -webkit-border-radius: 1000px;
+        border-radius: 1000px;
+    }
+    
+    &.full-width { 
+        width: 100%;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        text-align: center; 
+    }
+    
+    &.left-align { 
+        text-align: left; 
+        text-indent: 12px;
+    }
+}
+
+/* Don't use native buttons on iOS */
+input[type=submit].button { -webkit-appearance: none; }
+
+/* Sizes ---------- */
+.small.button           { font-size: 11px; padding: 8px 20px 10px; width: auto; }
+.medium.button          { font-size: 13px; width: auto; }
+.large.button           { font-size: 18px; padding: 11px 48px 13px; width: auto; }
+
+/* Nice Sizes ---------- */
+.nice.small.button      { background-position: 0 -36px; }
+.nice.large.button      { background-position: 0 -30px; }
+ 
+/* Colors ---------- */
+.blue.button            { background-color: #00a6fc;  }
+.red.button             { background-color: #e91c21; }
+.white.button           { background-color: #e9e9e9; color: #333; }
+.black.button           { background-color: #141414; }
+
+/* Nice Colors ---------- */
+.nice.blue.button       { border: 1px solid #0593dc;  }
+.nice.red.button        { border: 1px solid #b90b0b;  }
+.nice.white.button      { border: 1px solid #cacaca; text-shadow: none !important; }
+.nice.black.button      { border: 1px solid #000; }
+
+/* Hovers ---------- */
+.button:hover, .button:focus                { background-color: #0192dd; color: #fff; }
+.blue.button:hover, .blue.button:focus      { background-color: #0192dd;    }
+.red.button:hover, .red.button:focus        { background-color: #d01217;    }
+.white.button:hover, .white.button:focus    { background-color: #dadada; color: #333; }
+.black.button:hover, .black.button:focus    { background-color: #000; }
+
+/* Disabled ---------- */
+.button.disabled, .button[disabled] { opacity: 0.6; cursor: default; }
+
