Toolbar for listings
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -106,5 +106,7 @@
   <script type="text/javascript" charset="utf-8" src="{{ asset('js/kendoui/cultures/kendo.culture.en-US.js') }}"></script>
   
   {% block javascripts %}{% endblock %}
+  
+  {% block toolbar %}{% endblock %}
 </body>
 </html>
