--- a/web/css/siwapp-files/siwapp.patterns.less
+++ b/web/css/siwapp-files/siwapp.patterns.less
@@ -157,3 +157,22 @@ input[type=submit].button { -webkit-appearance: none; }
 /* Disabled ---------- */
 .button.disabled, .button[disabled] { opacity: 0.6; cursor: default; }
 
+//
+// Rightmost toolbar
+//
+
+#toolbar {
+    a {
+        visibility:hidden;
+        font-family: @iconFontFamily;
+        background:transparent no-repeat center center;
+        
+        &.remove:before { visibility:visible; content:"5"; }
+        &.print:before  { visibility:visible; content:"M"; }
+        &.pdf:before    { visibility:visible; content:"1"; }
+        &.email:before  { visibility:visible; content:"k"; }
+    }
+    a:hover {
+        text-decoration:none;
+    }
+}
