--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -94,6 +94,7 @@
     'js/kendoui/kendo.calendar.min.js'
     'js/kendoui/kendo.*.min.js'
     'js/jwerty.js'
+    'js/jquery.placeholder.min.js'
     'js/bundle/global.js'
     'js/bundle/search-common.js'
     output='js/min/frameworks.js'
