--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -30,14 +30,14 @@
 {% endblock %}
 
 {% block searchform %}
-  {% include "SiwappInvoiceBundle:Default:search.html.twig" %}
+  {% include "SiwappInvoiceBundle:Partials:search.html.twig" %}
 {% endblock %}
 
 {% block body %}
   
   <div id="invoices-latest-invoices">
     {% set table_rows = entities %}
-    {% include "SiwappInvoiceBundle:Default:invoices_list.html.twig" %}
+    {% include "SiwappInvoiceBundle:Partials:invoices_list.html.twig" %}
   </div>
   
 {% endblock %}
