--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -37,7 +37,7 @@
   
   <div id="invoices-latest-invoices">
     {% set table_rows = entities %}
-    {% include "SiwappInvoiceBundle:Partials:invoices_list.html.twig" %}
+    {% include "SiwappInvoiceBundle:Partials:listing.html.twig" %}
   </div>
   
 {% endblock %}
